started with dataset and made architectural changes, using factory for datasets now

--- a/selfCoded/GAN hdf5/12_gan_celeba.ipynb
+++ b/selfCoded/GAN hdf5/12_gan_celeba.ipynb
@@ -54,8 +54,8 @@
     "colab_type": "code",
     "colab": {},
     "ExecuteTime": {
-     "end_time": "2024-02-10T15:35:34.659821Z",
-     "start_time": "2024-02-10T15:35:34.654902Z"
+     "end_time": "2024-02-10T20:00:15.640506Z",
+     "start_time": "2024-02-10T20:00:12.436019Z"
     }
    },
    "source": [
@@ -69,7 +69,7 @@
     "import pandas, numpy, random\n",
     "import matplotlib.pyplot as plt"
    ],
-   "execution_count": 14,
+   "execution_count": 1,
    "outputs": []
   },
   {
@@ -93,8 +93,8 @@
      "height": 51
     },
     "ExecuteTime": {
-     "end_time": "2024-02-10T15:35:36.628002Z",
-     "start_time": "2024-02-10T15:35:36.620596Z"
+     "end_time": "2024-02-10T20:00:16.976850Z",
+     "start_time": "2024-02-10T20:00:16.969248Z"
     }
    },
    "source": [
@@ -113,13 +113,13 @@
     "\n",
     "device"
    ],
-   "execution_count": 15,
+   "execution_count": 2,
    "outputs": [
     {
      "data": {
       "text/plain": "device(type='cpu')"
      },
-     "execution_count": 15,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,8 +142,8 @@
     "colab_type": "code",
     "colab": {},
     "ExecuteTime": {
-     "end_time": "2024-02-10T15:35:38.109699Z",
-     "start_time": "2024-02-10T15:35:38.103732Z"
+     "end_time": "2024-02-10T20:00:18.541212Z",
+     "start_time": "2024-02-10T20:00:18.536593Z"
     }
    },
    "source": [
@@ -166,7 +166,8 @@
     "          raise IndexError()\n",
     "        img = numpy.array(self.dataset[str(index)+'.jpg'])/ 255.0\n",
     "        #return torch.FloatTensor(img,)/255.0\n",
-    "        return torch.tensor(img, dtype=torch.float32)\n",
+    "        # TODO: hier muss man reshape oder permute machen weil Channels sind ganz am Ende\n",
+    "        return torch.tensor(img, dtype=torch.float32)#.permute((2,1,0))\n",
     "    \n",
     "    def plot_image(self, index):\n",
     "        plt.imshow(numpy.array(self.dataset[str(index)+'.jpg']), interpolation='nearest')\n",
@@ -174,7 +175,7 @@
     "    \n",
     "    pass"
    ],
-   "execution_count": 16,
+   "execution_count": 3,
    "outputs": []
   },
   {
@@ -184,8 +185,8 @@
     "colab_type": "code",
     "colab": {},
     "ExecuteTime": {
-     "end_time": "2024-02-10T15:35:38.957318Z",
-     "start_time": "2024-02-10T15:35:38.941826Z"
+     "end_time": "2024-02-10T20:00:20.500988Z",
+     "start_time": "2024-02-10T20:00:20.226644Z"
     }
    },
    "source": [
@@ -193,12 +194,24 @@
     "\n",
     "celeba_dataset = CelebADataset('/Volumes/PortableSSD/Projekte/datasets/celeba_dataset/IMG/celeba_aligned_small.h5py')"
    ],
-   "execution_count": 17,
+   "execution_count": 4,
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": []
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] Unable to open file (unable to open file: name = '/Volumes/PortableSSD/Projekte/datasets/celeba_dataset/IMG/celeba_aligned_small.h5py', errno = 2, error message = 'No such file or directory', flags = 0, o_flags = 0)",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mFileNotFoundError\u001B[0m                         Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[4], line 3\u001B[0m\n\u001B[1;32m      1\u001B[0m \u001B[38;5;66;03m# create Dataset object\u001B[39;00m\n\u001B[0;32m----> 3\u001B[0m celeba_dataset \u001B[38;5;241m=\u001B[39m CelebADataset(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m/Volumes/PortableSSD/Projekte/datasets/celeba_dataset/IMG/celeba_aligned_small.h5py\u001B[39m\u001B[38;5;124m'\u001B[39m)\n",
+      "Cell \u001B[0;32mIn[3], line 6\u001B[0m, in \u001B[0;36mCelebADataset.__init__\u001B[0;34m(self, file)\u001B[0m\n\u001B[1;32m      5\u001B[0m \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21m__init__\u001B[39m(\u001B[38;5;28mself\u001B[39m, file):\n\u001B[0;32m----> 6\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mfile_object \u001B[38;5;241m=\u001B[39m h5py\u001B[38;5;241m.\u001B[39mFile(file, \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mr\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[1;32m      7\u001B[0m     \u001B[38;5;66;03m#self.dataset = self.file_object['img_align_celeba']\u001B[39;00m\n\u001B[1;32m      8\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mdataset \u001B[38;5;241m=\u001B[39m \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39mfile_object[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mVolumes\u001B[39m\u001B[38;5;124m'\u001B[39m][\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mPortableSSD\u001B[39m\u001B[38;5;124m'\u001B[39m][\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mProjekte\u001B[39m\u001B[38;5;124m'\u001B[39m][\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mdatasets\u001B[39m\u001B[38;5;124m'\u001B[39m][\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mceleba_dataset\u001B[39m\u001B[38;5;124m'\u001B[39m][\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mIMG\u001B[39m\u001B[38;5;124m'\u001B[39m][\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mimg_align_celeba\u001B[39m\u001B[38;5;124m'\u001B[39m]\n",
+      "File \u001B[0;32m~/anaconda3/envs/NeuronalNetwork/lib/python3.11/site-packages/h5py/_hl/files.py:567\u001B[0m, in \u001B[0;36mFile.__init__\u001B[0;34m(self, name, mode, driver, libver, userblock_size, swmr, rdcc_nslots, rdcc_nbytes, rdcc_w0, track_order, fs_strategy, fs_persist, fs_threshold, fs_page_size, page_buf_size, min_meta_keep, min_raw_keep, locking, alignment_threshold, alignment_interval, meta_block_size, **kwds)\u001B[0m\n\u001B[1;32m    558\u001B[0m     fapl \u001B[38;5;241m=\u001B[39m make_fapl(driver, libver, rdcc_nslots, rdcc_nbytes, rdcc_w0,\n\u001B[1;32m    559\u001B[0m                      locking, page_buf_size, min_meta_keep, min_raw_keep,\n\u001B[1;32m    560\u001B[0m                      alignment_threshold\u001B[38;5;241m=\u001B[39malignment_threshold,\n\u001B[1;32m    561\u001B[0m                      alignment_interval\u001B[38;5;241m=\u001B[39malignment_interval,\n\u001B[1;32m    562\u001B[0m                      meta_block_size\u001B[38;5;241m=\u001B[39mmeta_block_size,\n\u001B[1;32m    563\u001B[0m                      \u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39mkwds)\n\u001B[1;32m    564\u001B[0m     fcpl \u001B[38;5;241m=\u001B[39m make_fcpl(track_order\u001B[38;5;241m=\u001B[39mtrack_order, fs_strategy\u001B[38;5;241m=\u001B[39mfs_strategy,\n\u001B[1;32m    565\u001B[0m                      fs_persist\u001B[38;5;241m=\u001B[39mfs_persist, fs_threshold\u001B[38;5;241m=\u001B[39mfs_threshold,\n\u001B[1;32m    566\u001B[0m                      fs_page_size\u001B[38;5;241m=\u001B[39mfs_page_size)\n\u001B[0;32m--> 567\u001B[0m     fid \u001B[38;5;241m=\u001B[39m make_fid(name, mode, userblock_size, fapl, fcpl, swmr\u001B[38;5;241m=\u001B[39mswmr)\n\u001B[1;32m    569\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;28misinstance\u001B[39m(libver, \u001B[38;5;28mtuple\u001B[39m):\n\u001B[1;32m    570\u001B[0m     \u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_libver \u001B[38;5;241m=\u001B[39m libver\n",
+      "File \u001B[0;32m~/anaconda3/envs/NeuronalNetwork/lib/python3.11/site-packages/h5py/_hl/files.py:231\u001B[0m, in \u001B[0;36mmake_fid\u001B[0;34m(name, mode, userblock_size, fapl, fcpl, swmr)\u001B[0m\n\u001B[1;32m    229\u001B[0m     \u001B[38;5;28;01mif\u001B[39;00m swmr \u001B[38;5;129;01mand\u001B[39;00m swmr_support:\n\u001B[1;32m    230\u001B[0m         flags \u001B[38;5;241m|\u001B[39m\u001B[38;5;241m=\u001B[39m h5f\u001B[38;5;241m.\u001B[39mACC_SWMR_READ\n\u001B[0;32m--> 231\u001B[0m     fid \u001B[38;5;241m=\u001B[39m h5f\u001B[38;5;241m.\u001B[39mopen(name, flags, fapl\u001B[38;5;241m=\u001B[39mfapl)\n\u001B[1;32m    232\u001B[0m \u001B[38;5;28;01melif\u001B[39;00m mode \u001B[38;5;241m==\u001B[39m \u001B[38;5;124m'\u001B[39m\u001B[38;5;124mr+\u001B[39m\u001B[38;5;124m'\u001B[39m:\n\u001B[1;32m    233\u001B[0m     fid \u001B[38;5;241m=\u001B[39m h5f\u001B[38;5;241m.\u001B[39mopen(name, h5f\u001B[38;5;241m.\u001B[39mACC_RDWR, fapl\u001B[38;5;241m=\u001B[39mfapl)\n",
+      "File \u001B[0;32mh5py/_objects.pyx:54\u001B[0m, in \u001B[0;36mh5py._objects.with_phil.wrapper\u001B[0;34m()\u001B[0m\n",
+      "File \u001B[0;32mh5py/_objects.pyx:55\u001B[0m, in \u001B[0;36mh5py._objects.with_phil.wrapper\u001B[0;34m()\u001B[0m\n",
+      "File \u001B[0;32mh5py/h5f.pyx:106\u001B[0m, in \u001B[0;36mh5py.h5f.open\u001B[0;34m()\u001B[0m\n",
+      "\u001B[0;31mFileNotFoundError\u001B[0m: [Errno 2] Unable to open file (unable to open file: name = '/Volumes/PortableSSD/Projekte/datasets/celeba_dataset/IMG/celeba_aligned_small.h5py', errno = 2, error message = 'No such file or directory', flags = 0, o_flags = 0)"
+     ]
     }
    ]
   },
@@ -405,7 +418,6 @@
     "    def train(self, data_loader, targets):\n",
     "        # calculate the output of the network\n",
     "        for inputs in data_loader:\n",
-    "            print(\"input shape of one batch from dataloader:\" + str(inputs.shape))\n",
     "            outputs = self.forward(inputs)\n",
     "            \n",
     "            # calculate loss\n",
@@ -817,7 +829,6 @@
     "  for image_data_tensor in dataloader_train:\n",
     "    # train discriminator on true\n",
     "    \n",
-    "    print(\"shape of one batch\" + str(image_data_tensor.shape))\n",
     "    D.train(image_data_tensor, torch.tensor([1.0], dtype=torch.float32, device=device))\n",
     "    \n",
     "    # train discriminator on false\n",
